syntax = "proto3";
package fairyring.fairyring;

option go_package = "fairyring/x/fairyring/types";

message KeyShare {
  string validator = 1; 
  uint64 blockHeight = 2;
  string commitment = 3;
  string keyShare = 4;
  uint64 keyShareIndex = 5;
  uint64 receivedTimestamp = 6;
  uint64 receivedBlockHeight = 7;
  
}

